#53 fixing alignment for words landing page

--- a/web/app/user/sass/pages/_wordsFeatured.scss
+++ b/web/app/user/sass/pages/_wordsFeatured.scss
@@ -1,14 +1,30 @@
 .words-wrapper {
 
          background: transparent url(/user/img/words/words_bg_tile.jpg)  0px 0px repeat;
-
-         min-height: 400px;
+         min-height: 800px;
          width: 1140px;
          margin: 0 auto;
          display: block;
          position: relative;
          background-size: contain;
 
+         @media screen and (max-width: 1280px) {
+              width: 100%;
+         }
+
+         .homepage-content {
+            height: auto !important;
+            min-height: 200px;
+         }
+
+         .page-header {
+            width: 90%;
+            padding-top: 3%;
+         }
+         .pagination-head {
+            width: 85%;
+            margin-left: 2%;
+         }
 
          &:before, &:after {
              content: '';
@@ -21,7 +37,7 @@
              height: 100%;
 
 
-             @media screen and (max-width: 1380px) {
+             @media screen and (max-width: 1280px) {
                  display: none;
              }
          }
